--- a/weather.scss
+++ b/weather.scss
@@ -1,7 +1,9 @@
 .weather {
-  width: 100%;
+  background-color: #333;
   height: 100%;
+  overflow: hidden;
   position: relative;
+  width: 100%;
 
   .details {
     display: inline-block;
@@ -38,8 +40,13 @@
     height: 0;
 
     path {
-      fill: #fff;
-      opacity: .25;
+      fill: #b71c1c;
+      opacity: 0.5;
+    }
+
+    rect {
+      fill: #0d47a1;
+      opacity: 0.5;
     }
   }
 
@@ -57,7 +64,7 @@
 
     .x {
       .label {
-        bottom: 1rem;
+        bottom: 0;
         transform: translateX(-50%);
       }
 
@@ -74,13 +81,17 @@
 
         .label {
           display: block;
-          left: .5rem;
-          transform: translateY(-1rem);
+          left: .25rem;
+        }
+      }
 
-          &:last-of-type {
-            top: 1rem;
-            bottom: auto;
-          }
+      .rain {
+        display: flex;
+        flex-direction: column;
+
+        .label {
+          display: block;
+          right: .25rem;
         }
       }
     }
